# playdate-opusfile-test

./: .gitmodules  CMakeLists.txt  README.md
Source/: 28.opus  credits.txt  pdxinfo  selection.opus
src/: main.c  main.h
